--- a/page2.html
+++ b/page2.html
@@ -26,25 +26,18 @@
 <body>
 <section id="menu-2">
 
-    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent">
         <div class="container">
 
             <div class="mbr-table">
+                
                 <div class="mbr-table-cell">
 
-                    <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/logo.png" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">MOBIRISE</a>
-                    </div>
-
-                </div>
-                <div class="mbr-table-cell">
-
-                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/">FEATURES</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Mobile friendly</a><a class="dropdown-item" href="https://mobirise.com/">Based on Bootstrap</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/">Trendy blocks</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="https://mobirise.com/">Image/content slider</a><a class="dropdown-item" href="https://mobirise.com/">Contact forms</a><a class="dropdown-item" href="https://mobirise.com/">Image gallery</a><a class="dropdown-item" href="https://mobirise.com/">Mobile menu</a><a class="dropdown-item" href="https://mobirise.com/">Google maps</a><a class="dropdown-item" href="https://mobirise.com/">Social buttons</a><a class="dropdown-item" href="https://mobirise.com/">Google fonts</a><a class="dropdown-item" href="https://mobirise.com/">Video background</a></div></div><a class="dropdown-item" href="https://mobirise.com/">Host anywhere</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum</a><a class="dropdown-item" href="https://mobirise.com/">Tutorials</a><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="https://mobirise.com/">DOWNLOAD</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false">ABOUT ME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">WORK</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,10 +50,22 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy wysiwyg web creator software</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-3" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best responsive web site creator software download</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-b" style="background-image: url(assets/images/13227363-10156913758965287-2492047788766834747-o-2000x3000-47.jpg); padding-top: 120px; padding-bottom: 120px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">ABOUT</h3>
+        <div class="lead"><p>Hi, I'm Ilona. I'm currently living in Ghent, where I study painting at LUCA school of arts.&nbsp;</p></div>
+    </div>
+
+</section>
+
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-3" style="background-color: rgb(239, 239, 239); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">Copyright (c) 2016 Mobirise.</p>
+        <p class="text-xs-center">Copyright (c) 2016 Ilona Rijkeboer.</p>
     </div>
 </footer>
 
@@ -74,10 +79,12 @@
   <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchSwipe/jquery.touchSwipe.min.js"></script>
+  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
   <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
   <input name="cookieData" type="hidden" data-cookie-text="We all love cookies. Read the recipe here <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
