--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false">ABOUT ME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">WORK</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false">ABOUT ME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">WORK</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg web site generator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/ierland-2000x1333-18.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">offline web site creator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/ierland-2000x1333-18.jpg);">
 
     
 
@@ -95,6 +95,6 @@
   
   <input name="animation" type="hidden">
    <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
-  <input name="cookieData" type="hidden" data-cookie-text="We all love cookies. Read the recipe here <a href='privacy.html'>cookie policy</a>.">
+  <input name="cookieData" type="hidden" data-cookie-text="What's life without cookies? Click here for more information <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
