--- a/page1.html
+++ b/page1.html
@@ -40,7 +40,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false">ABOUT ME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">WORK</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false">ABOUT ME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">WORK</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -53,7 +53,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top mobile site builder software download</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery2-6" data-filter="true" style="background-color: rgb(239, 239, 239); padding-top: 6rem; padding-bottom: 3rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy mobile web site builder software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery2-6" data-filter="true" style="background-color: rgb(239, 239, 239); padding-top: 6rem; padding-bottom: 3rem;">
     <!-- Filter -->
     <div class="mbr-gallery-filter container gallery-filter-active">
         <ul>
@@ -572,6 +572,6 @@
   
   <input name="animation" type="hidden">
    <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
-  <input name="cookieData" type="hidden" data-cookie-text="We all love cookies. Read the recipe here <a href='privacy.html'>cookie policy</a>.">
+  <input name="cookieData" type="hidden" data-cookie-text="What's life without cookies? Click here for more information <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
