--- a/page2.html
+++ b/page2.html
@@ -38,7 +38,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false">ABOUT ME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">WORK</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false">ABOUT ME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">WORK</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -51,7 +51,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy drag and drop web site development software</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-b" style="background-image: url(assets/images/13227363-10156913758965287-2492047788766834747-o-2000x3000-47.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy bootstrap web page builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-b" style="background-image: url(assets/images/13227363-10156913758965287-2492047788766834747-o-2000x3000-47.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -115,6 +115,6 @@
   
   <input name="animation" type="hidden">
    <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
-  <input name="cookieData" type="hidden" data-cookie-text="We all love cookies. Read the recipe here <a href='privacy.html'>cookie policy</a>.">
+  <input name="cookieData" type="hidden" data-cookie-text="What's life without cookies? Click here for more information <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
