--- a/page3.html
+++ b/page3.html
@@ -38,7 +38,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false">ABOUT ME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">WORK</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false">ABOUT ME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">WORK</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -51,7 +51,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple bootstrap web building</a></section><section class="mbr-section mbr-after-navbar" id="form1-c" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy html web page creator software download</a></section><section class="mbr-section mbr-after-navbar" id="form1-c" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -76,7 +76,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT ME">
 
-                        <input type="hidden" value="VqbvbBOXDsTpx7EXOup4+0xgUVe1nqUkozmyOiROTpT0tJOmwJfh26WCiI4cjsqEe4ZxCoClBotCoHF9ssuxbLLC8r+dK/H61MPWEe9jHg5y/nnWrd18q0E9/Ycm3Lcl" data-form-email="true">
+                        <input type="hidden" value="cFkR212ZY+7Wg9XIfHhRoKkL8FSjAvfZM3vW8omyw7RFyjeJ//0OJUgB1K7UHDCRFEQPY8b7QnX//mKQjDMXZX/m8DE1vYHkvvMbFqKsTp9oz8PmH9TqEEHOyFE+csA1" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -164,6 +164,6 @@
   
   <input name="animation" type="hidden">
    <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
-  <input name="cookieData" type="hidden" data-cookie-text="We all love cookies. Read the recipe here <a href='privacy.html'>cookie policy</a>.">
+  <input name="cookieData" type="hidden" data-cookie-text="What's life without cookies? Click here for more information <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
