--- a/page1.html
+++ b/page1.html
@@ -53,7 +53,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy mobile web site builder software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery2-6" data-filter="true" style="background-color: rgb(239, 239, 239); padding-top: 6rem; padding-bottom: 3rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">bootstrap web development</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery2-6" data-filter="true" style="background-color: rgb(239, 239, 239); padding-top: 6rem; padding-bottom: 3rem;">
     <!-- Filter -->
     <div class="mbr-gallery-filter container gallery-filter-active">
         <ul>
