--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false">ABOUT ME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">WORK</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false">ABOUT ME</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">WORK</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -50,11 +50,7 @@
 
 </section>
 
-<<<<<<< HEAD
-<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop web creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/ierland-2000x1333-18.jpg);">
-=======
-<section class="engine"><a rel="external" href="https://mobirise.com">simple site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/ierland-2000x1333-18.jpg);">
->>>>>>> origin/gh-pages
+<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg web site development software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/ierland-2000x1333-18.jpg);">
 
     
 
